# jijin

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  关闭.bat  启动.bat  每日更新数据.bat  采集数据.bat
backend/: .dockerignore  Dockerfile  README.md  _check_capital.py  _check_metrics.py  alembic.ini  pyproject.toml  test_db.py
backend/app/: __init__.py  cli.py  main.py
backend/app/ai/: __init__.py  audit.py  budget.py  cache.py  data_masking.py  feature_gate.py  provider.py  service.py
backend/app/ai/providers/: __init__.py  anthropic.py  openai_compat.py
backend/app/ai/use_cases/: __init__.py  advisor_insight.py  announcement_parse.py  attribution_report.py  factor_brainstorm.py  nl_query.py  report_extract.py  strategy_gen.py
backend/app/api/: __init__.py  errors.py  middleware.py
backend/app/api/v1/: __init__.py  admin.py  advisor.py  ai.py  alerts.py  backtests.py  discovery.py  factors.py  funds.py  holdings.py  meta.py  settings.py  simulations.py  strategies.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py
backend/app/data/: __init__.py  cache.py  learned_params.2026-05-18.json  learned_params.2026-05-20.json  learned_params.2026-05-21.json  migrations.py  oos_validation_snapshots.json  session.py
backend/app/data/fetchers/: __init__.py  circuit_breaker.py  http_client.py  proxy_pool.py  rate_limiter.py  retry.py
backend/app/data/models/: __init__.py  advisor_execution_records.py  advisor_learned_params_versions.py  advisor_oos_snapshots.py  advisor_parameter_sets.py  advisor_position_imports.py  advisor_positions.py  advisor_reminder_preferences.py  advisor_reminders.py  advisor_results.py  advisor_user_learning_profiles.py  backtests.py  benchmark.py  fund_announcements.py  fund_dividends.py  fund_fees.py  fund_holdings.py  fund_meta_history.py  fund_nav.py  fund_ranking.py  funds.py  index_valuation.py  llm_calls.py  signals.py  simulations.py  strategies.py
backend/app/data/providers/: __init__.py  akshare.py  base.py  cninfo.py  composite.py  eastmoney.py  factory.py  index_valuation_provider.py  snapshot.py
backend/app/data/repositories/: __init__.py  base.py  dividend_repo.py  fee_repo.py  fund_repo.py  holding_repo.py  nav_repo.py
backend/app/data/schemas/: __init__.py  funds.py
backend/app/domain/: __init__.py
backend/app/notify/: __init__.py  email.py  service.py  telegram.py  wecom.py
backend/app/observability/: __init__.py  instrumentation.py  metrics.py
backend/app/services/: __init__.py  advisor_backtest.py  advisor_execution.py  advisor_execution_records.py  advisor_feedback.py  advisor_oos.py  advisor_parameter_governance.py  advisor_profiles.py  advisor_reminders.py  advisor_tracking.py  advisor_user_learning.py  backtest_compare.py  cross_sectional_scorer.py  factor_service.py  holdings_analysis.py  macro_factor.py  monte_carlo.py  nonlinear_fusion.py  optimization.py  performance_service.py  report_service.py  runtime_health.py  stock_industry.py  trading_advisor.py  valuation_service.py  walk_forward.py
backend/app/tasks/: __init__.py  advisor.py  advisor_tracking.py  async_utils.py  backtest.py  backup.py  celery_app.py  chain_guard.py  discovery.py  ingest.py  ingest_benchmark.py  ingest_delisted.py  nav_quality.py  optimization.py  ping.py  schedule.py  signals.py  simulation.py  valuation_ingest.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: .gitkeep  2026_05_13_9435bbd59a7f_create_fund_tables.py  2026_05_14_a1b2c3d4e5f6_add_fund_rankings_table.py  2026_05_16_b2c3d4e5f6a7_add_benchmark_nav_table.py  2026_05_17_c3d4e5f6a7b8_add_funds_delisting_date.py  2026_05_17_d4e5f6a7b8c9_add_fund_meta_history.py  2026_05_18_e5f6a7b8c9d0_add_simulation_runs_table.py  2026_05_19_9a343882301a_add_advisor_tracking_fields.py  2026_05_19_b39fac44aa72_add_index_valuation_table.py  2026_05_19_f6a7b8c9d0e1_add_advisor_results_table.py  2026_05_23_1a2b3c4d5e6f_add_strategy_snapshot_to_simulation_runs.py  2026_05_23_7f8e9d0c1b2a_add_updated_at_to_advisor_results.py  2026_05_25_a7b8c9d0e1f2_add_unique_constraint_to_signals.py  2026_05_26_b8c9d0e1f2a3_add_user_profile_to_advisor_results.py  2026_05_26_c9d0e1f2a3b4_add_advisor_oos_snapshots_table.py  2026_05_27_d1e2f3a4b5c6_add_advisor_learned_versions_and_execution_audit.py  2026_05_27_e2f3a4b5c6d7_make_advisor_oos_snapshots_versioned.py  2026_05_28_a4b5c6d7e8f9_add_advisor_parameter_gate_fields.py  2026_05_28_b5c6d7e8f9a0_add_advisor_parameter_sets.py  2026_05_28_c6d7e8f9a0b1_add_advisor_execution_records.py  2026_05_28_f3a4b5c6d7e8_add_pbo_to_advisor_oos_snapshots.py  2026_05_29_d7e8f9a0b1c2_add_multi_objective_to_oos_snapshots.py  2026_05_29_e8f9a0b1c2d3_add_baseline_gate_to_oos_snapshots.py  2026_06_02_a1b2c3d4e5f6_add_advisor_position_imports_table.py  2026_06_02_f0a1b2c3d4e5_add_advisor_positions_table.py  2026_06_03_b1c2d3e4f5a6_add_advisor_reminders_table.py  2026_06_03_c2d3e4f5a6b7_add_advisor_user_learning_profiles.py  2026_06_03_d3e4f5a6b7c8_add_advisor_reminder_preferences.py
backend/tests/: conftest.py  test_advisor_backtest_timing.py  test_advisor_db_resilience.py  test_ai_feature_gate.py  test_ai_usage_api.py  test_alerts_webhook.py  test_announcement_parse.py  test_api_admin.py  test_api_advisor_history_refresh.py  test_api_backtests.py  test_api_factors.py  test_api_factors_evaluate.py  test_api_funds_nav_quality.py  test_api_inference.py  test_api_meta.py  test_api_simulations.py  test_api_strategies.py  test_attribution_report.py  test_backtest_cash_settlement.py  test_backtest_data_quality.py  test_backtest_engine_cash_lots.py  test_backtest_events.py  test_backtest_fees.py  test_backtest_lot_redeem_fee.py  test_backtest_order.py  test_backtest_portfolio.py  test_backtest_quality_gate.py  test_backtest_result.py  test_backtest_settlement.py  test_backup_task.py  test_beat_schedule.py  test_brinson.py  test_broker.py  test_celery_app.py  test_cli.py  test_config.py  test_corporate_actions.py  test_cors.py  test_cpcv.py  test_cross_section.py  (+67 more)
backend/tests/data/: test_cache.py  test_models.py
deploy/: README.md  (+2 more)
(+302 files in other folders)
