[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fund-quant-platform-backend"
version = "0.1.0"
description = "Fund Quant Platform backend (FastAPI, Celery, factor/backtest engine)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Fund Quant Platform Team" }]
keywords = ["fund", "quant", "backtest", "factor", "fastapi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Private :: Do Not Upload",
]

# ---------------------------------------------------------------------
# Core runtime dependencies
# ---------------------------------------------------------------------
dependencies = [
    # Web
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-multipart>=0.0.9",

    # Persistence
    "sqlalchemy>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.13,<2.0",

    # Task queue / cache
    "celery[redis]>=5.4,<6.0",
    "redis>=5.0,<6.0",

    # HTTP / scraping
    "httpx[http2]>=0.27,<1.0",
    "tenacity>=8.3,<10.0",
    "selectolax>=0.3.21",
    "parsel>=1.9,<2.0",

    # Data / scientific stack
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "polars>=1.0,<2.0",
    "scipy>=1.13,<2.0",
    "statsmodels>=0.14,<1.0",
    "pyarrow>=16.0",
    "matplotlib>=3.8,<4.0",
    "openpyxl>=3.1,<4.0",

    # External data
    "akshare>=1.14",

    # Observability
    "prometheus-fastapi-instrumentator>=7.0,<8.0",
    "structlog>=24.1,<26.0",

    # CLI
    "typer>=0.12,<1.0",
    "rich>=13.7,<15.0",

    # Utilities
    "orjson>=3.10,<4.0",
    "python-dateutil>=2.9,<3.0",
    "tzdata>=2024.1",

    # Trading calendar
    "exchange_calendars>=4.5,<5.0",
]

[project.optional-dependencies]
# ---------------------------------------------------------------------
# Dev tools: linters, formatters, type-checkers, pre-commit
# ---------------------------------------------------------------------
dev = [
    "ruff>=0.6,<1.0",
    "black>=24.8,<26.0",
    "mypy>=1.11,<2.0",
    "pre-commit>=3.8,<5.0",
    "types-python-dateutil>=2.9",
    "types-redis>=4.6",
    "pandas-stubs>=2.2",
]

# ---------------------------------------------------------------------
# Test-only dependencies
# ---------------------------------------------------------------------
test = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.23,<2.0",
    "pytest-cov>=5.0,<7.0",
    "pytest-mock>=3.14,<4.0",
    "hypothesis>=6.108,<7.0",
    "httpx>=0.27",                     # ASGI TestClient
    "vcrpy>=6.0,<8.0",
    "freezegun>=1.5,<2.0",
    "aiosqlite>=0.20,<1.0",
]

# ---------------------------------------------------------------------
# AI / LLM provider SDKs (optional; enabled when AI_ENABLED=true)
# ---------------------------------------------------------------------
ai = [
    "openai>=1.40,<2.0",
    "anthropic>=0.34,<1.0",
    "pypdf>=4.3,<6.0",
    "pdfplumber>=0.11,<1.0",
]

[project.scripts]
fundquant = "app.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "migrations*"]

# =====================================================================
# Ruff — lint + import sort
# =====================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]
extend-exclude = ["migrations/versions", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "RUF",  # Ruff-specific
]
ignore = [
    "E501",  # line length handled by black
    "B008",  # FastAPI Depends() in defaults is idiomatic
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "N802", "N803"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

# =====================================================================
# Black
# =====================================================================
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
extend-exclude = "migrations/versions"

# =====================================================================
# mypy
# =====================================================================
[tool.mypy]
python_version = "3.11"
files = ["app"]
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
show_error_codes = true
pretty = true
namespace_packages = true
explicit_package_bases = true
exclude = ["migrations/", "tests/"]

[[tool.mypy.overrides]]
module = [
    "akshare.*",
    "statsmodels.*",
    "scipy.*",
    "selectolax.*",
    "parsel.*",
    "vcr.*",
    "freezegun.*",
    "celery.*",
    "prometheus_fastapi_instrumentator.*",
    "exchange_calendars.*",
]
ignore_missing_imports = true

# =====================================================================
# pytest
# =====================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: fast in-process unit tests",
    "integration: tests that touch external services (db/redis/network)",
    "slow: tests that take > 1s",
]

# =====================================================================
# Coverage
# =====================================================================
[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/cli.py", "app/main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0  # raised to 70 in CI after phase 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
